<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shipping_details_confirm">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/HeaderbarShipDEdit"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/HeadBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ShipDEditTitle"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/shipping_detailsTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/HeaderbarShipDEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ShipDEditBackArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/HeaderbarShipDEdit" />

    <Button
        android:id="@+id/ShipDEditBackArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/right_arrowiconfinal_png"
        android:contentDescription="@string/shipdbackaroow"
        android:onClick="backward"
        app:layout_constraintBottom_toBottomOf="@+id/HeaderbarShipDEdit"
        app:layout_constraintEnd_toEndOf="@+id/HeaderbarShipDEdit"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="@+id/HeaderbarShipDEdit"
        app:layout_constraintTop_toTopOf="@+id/HeaderbarShipDEdit"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/BGYelloImg"
        android:layout_width="224dp"
        android:layout_height="225dp"
        android:contentDescription="@string/backgroundyelloimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/dec3_png"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ShipDEditNamaeTag"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ShipDNameTag"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderbarShipDEdit" />

    <TextView
        android:id="@+id/ShipDConNameView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_input"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipDEditNamaeTag" />

    <TextView
        android:id="@+id/shipDEditMnumberTag"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/shipdmobilenumberfild"
        android:text="@string/ShipDmobile_number"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipDConNameView" />

    <TextView
        android:id="@+id/shipDConMobileView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/mobile_number"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDEditMnumberTag" />

    <TextView
        android:id="@+id/ShipDEditHouseNoTag"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/shipdhousenotag"
        android:text="@string/house_apartment_no"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConMobileView" />

    <TextView
        android:id="@+id/shipDConHouseNoView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/house_no"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipDEditHouseNoTag" />

    <TextView
        android:id="@+id/shipDEditAddressL1Tag"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/address_line_1"
        android:text="@string/address_line_1"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConHouseNoView" />

    <TextView
        android:id="@+id/shipDConLine1View"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/address_line_1"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDEditAddressL1Tag" />

    <TextView
        android:id="@+id/shipDEditAddressL2Tag"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/address_line_2"
        android:text="@string/adress_line_2"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConLine1View" />

    <TextView
        android:id="@+id/shipDConLine2View"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/address_line_22"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDEditAddressL2Tag" />

    <TextView
        android:id="@+id/shipDEditCityTag"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/city"
        android:text="@string/city"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConLine2View" />

    <TextView
        android:id="@+id/shipDConCityView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/city"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDEditCityTag" />

    <TextView
        android:id="@+id/shipDEditProvinceTag"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/province"
        android:text="@string/province"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConCityView" />


    <TextView
        android:id="@+id/shipDConProvinceView"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/province"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDEditProvinceTag" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ShipDConCostBar"
        android:layout_width="367dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/HeadBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipDConProvinceView"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/shipDConcostTag"
        android:layout_width="142dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/shipd_cost_tag"
        android:gravity="center_vertical"
        android:text="@string/shipping_cost"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ShipDConCostBar"
        app:layout_constraintStart_toStartOf="@+id/ShipDConCostBar"
        app:layout_constraintTop_toTopOf="@+id/ShipDConCostBar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/shipDConcostView"
        android:layout_width="118dp"
        android:layout_height="34dp"

        android:contentDescription="@string/shipd_rs_tag"
        android:gravity="center|center_vertical"
        android:text="@string/rs_290_00"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ShipDConCostBar"
        app:layout_constraintEnd_toEndOf="@+id/ShipDConCostBar"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/shipDConcostTag"
        app:layout_constraintTop_toTopOf="@+id/ShipDConCostBar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/shipDEditBut"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F16A2B"
        android:contentDescription="@string/ship_dc_heckout_but"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ShipDEditConfirmBut"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipDConCostBar"
        app:layout_constraintVertical_bias="0.71"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/ShipDEditConfirmBut"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/ship_dc_heckout_but"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipDConCostBar"
        app:layout_constraintVertical_bias="0.71"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>