<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailed">

    <Button
        android:id="@+id/backBtnWish"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/right_arrow2"
        android:onClick="backward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/pd_addWishListBtn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/AddWishList"
        android:text="@string/AddWishList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pd_proDescription"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/BuyBt"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#FFAA00"
        android:text="@string/Buy"
        app:layout_constraintBaseline_toBaselineOf="@+id/pd_addWishListBtn"
        app:layout_constraintEnd_toStartOf="@+id/pd_addWishListBtn"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="248dp"
        android:layout_height="203dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/ProductDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/product_image" />

    <TextView
        android:id="@+id/pd_proName"
        android:layout_width="261dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:text="@string/productName"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/productPrice"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/ProductDescription1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/pd_proPrice"
        android:layout_width="261dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:text="@string/productPrice"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
        app:layout_constraintStart_toEndOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/productName"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/pd_proDescription"
        android:layout_width="322dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/descptionhint"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />
</androidx.constraintlayout.widget.ConstraintLayout>